# fuelpricesgr

./: .dockerignore  .env.sample  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  fabfile.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-and-test.yml
frontend/: index.html  package-lock.json  package.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
frontend/css/: styles.css
frontend/js/: index.js
frontend/src/: index.html  index.js  style.css
frontend/src/js/: api.js  enums.js  main.js
frontend/src/scss/: styles.scss
fuelpricesgr/: __init__.py  api.py  caching.py  conftest.py  data.py  database.py  enums.py  extract.py  fetch.py  fetcher.py  importer.py  mail.py  main.py  models.py  parser.py  response.py  schemas.py  services.py  settings.py  tasks.py  tests.py
fuelpricesgr/aws/lambda/downloader/: lambda_function.py
fuelpricesgr/aws/lambdas/downloader/: lambda_function.py
fuelpricesgr/commands/: clearcache.py  createuser.py  graph.py  import.py
fuelpricesgr/fetcher/: __init__.py  base.py  local.py  local_file.py  s3.py
fuelpricesgr/mail/: __init__.py  base.py  filebased.py  ses.py
fuelpricesgr/services/: __init__.py  base.py  sql.py
fuelpricesgr/services/storage/: __init__.py  base.py  firebase.py  sql.py
fuelpricesgr/storage/: __init__.py  base.py  firebase.py  mongo.py  sql_alchemy.py
fuelpricesgr/tests/: __init__.py  common.py  test_daily_country_data.py  test_daily_data.py  test_daily_prefecture_data.py  test_date_range.py  test_enums.py  test_fuel_types.py  test_index.py  test_prefectures.py  test_weekly_country_data.py  test_weekly_prefecture_data.py
fuelpricesgr/tests/factories/: __init__.py  sql_alchemy.py
fuelpricesgr/tests/test_api/: test_daily_country.py  test_daily_prefecture.py  test_date_range.py  test_fuel_types.py  test_prefectures.py  test_status.py  test_weekly_country.py  test_weekly_prefecture.py
fuelpricesgr/views/: __init__.py  admin.py  api.py
tests/: conftest.py  test_api.py  test_fuelpricesgr.py
