[project]
name = "fuelpricesgr"
version = "0.1.0"
description = "A database of fuel prices in Greece"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi~=25.1.0",
    "boto3~=1.42.0",
    "cachelib~=0.13.0",
    "environs~=14.5.0",
    "factory-boy~=3.3.0",
    "fastapi~=0.128.0",
    "gunicorn~=23.0.0",
    "itsdangerous~=2.2.0",
    "matplotlib~=3.10.0",
    "mysqlclient~=2.2.0",
    "psycopg2~=2.9.0",
    "pymongo~=4.16.0",
    "pymysql~=1.1.0",
    "pypdf~=6.5.0",
    "redis~=7.1.0",
    "requests~=2.32.0",
    "sqladmin~=0.22.0",
    "sqlalchemy~=2.0.0",
    "starlette~=0.50.0",
    "uvicorn~=0.40.0",
]

[dependency-groups]
dev = [
    "coverage~=7.13.0",
    "httpx~=0.28.0",
    "pylint~=4.0.0",
    "pytest~=9.0.0",
    "safety~=3.7.0",
]
