[project]
name = "fuelpricesgr"
version = "0.1.0"
description = "A database of fuel prices in Greece"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler~=3.11.0",
    "argon2-cffi~=25.1.0",
    "boto3~=1.43.0",
    "cachelib~=0.14.0",
    "environs~=15.0.0",
    "fastapi~=0.136.0",
    "itsdangerous~=2.2.0",
    "matplotlib~=3.10.0",
    "pydantic~=2.13.0",
    "pypdf~=6.12.0",
    "python-dateutil~=2.9.0",
    "requests~=2.34.0",
    "sqladmin~=0.27.0",
    "sqlalchemy~=2.0.0",
    "starlette~=1.2.0",
    "uvicorn~=0.48.0",
]

[dependency-groups]
dev = [
    "coverage~=7.14.0",
    "factory-boy~=3.3.0",
    "httpx2~=2.3.0",
    "pylint~=4.0.0",
    "pytest~=9.0.0",
    "safety~=3.8.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg~=3.3.0",
    "psycopg-binary~=3.3.0"
]

mysql = [
    "pymysql~=1.1.0"
]

mongo = [
    "pymongo~=4.17.0"
]
